--- a/package.json
+++ b/package.json
@@ -15,21 +15,24 @@
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"autoprefixer": "^10.4.7",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"graphql": "^16.5.0",
 		"graphql-request": "^4.3.0",
 		"marked": "^4.0.18",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
-		"vite": "^3.0.0",
-		"postcss": "^8.4.14",
-		"postcss-load-config": "^4.0.1",
 		"svelte-preprocess": "^4.10.7",
-		"autoprefixer": "^10.4.7",
-		"tailwindcss": "^3.1.5"
+		"tailwindcss": "^3.1.5",
+		"vite": "^3.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"gsap": "^3.10.4"
+	}
 }
